fixed background gradient
made gradient background extend downwards when page overflows and scrolls

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,7 @@
 /* ===General CSS=== */
 /* HTML CSS */
 html {
-    height:100%;
+    min-height:100%;
 }
 
 /* Link Style: Removes Underline */
@@ -69,23 +69,20 @@ a {
 /* ===Background for Different Pages=== */
 /* CSS for Home and Profile */
 .adminPage {
-    height:100%;
-    background-image: linear-gradient(#E1D1BC, #EBE0D2);
+    background-image: linear-gradient(#E1D1BC, #EBE0D2); 
     width: 100%;
     height: 100%;
 }
 
 /* CSS for Login/Register Pages */
 .loginPage {
-    height:100%;
-    background-image: linear-gradient(#4193A6,#4ba4b8, #73b8c8);
+    background-image: linear-gradient(#4193A6,#4ba4b8, #73b8c8); 
     width: 100%;
     height: 100%;
 }
 
 /* CSS for Hangman Game Pages */
 .hangmanGamePage {
-    height:100%;
     background-image: linear-gradient(#084A59,#156A7D, #187D94);
     width: 100%;
     height: 100%;
